# ossu

./: README.md
01-intro_to_cs/: main.py  pyproject.toml
01-intro_to_cs/notes/: lecture_01.md  lecture_02.md  lecture_03.md  lecture_04.md  lecture_05.md  lecture_06.md  lecture_07.md  lecture_08.md  lecture_09.md  lecture_10.md
01-intro_to_cs/psets/: ps0.py
01-intro_to_cs/psets/ps1/mit6_100l_f22_ps1_code/: ps1a.py  ps1a_in_function.py  ps1b.py  ps1b_in_function.py  ps1c.py  ps1c_in_function.py
