[project]
name = "01-intro-to-cs"
version = "0.1.0"
description = "Class work folder for MIT 6.100L"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "T201"]

[tool.basedpyright]
